/*
  Customer Credit Rating

  This service domain maintains and administers the bank's credit assessment for customers based on consolidated internal data and optionally by referencing external credit agency reports

  The version of the OpenAPI document: 10.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package com.redhat.mercury.customercreditrating.v10.api.bqalertsservice;

import "google/protobuf/empty.proto";
import public "v10/model/capture_alerts_request.proto";
import public "v10/model/capture_alerts_response.proto";
import public "v10/model/http_error.proto";
import public "v10/model/retrieve_alerts_response.proto";

service BQAlertsService {
  rpc CaptureAlerts (CaptureAlertsRequest) returns (CaptureAlertsResponse);

  rpc RetrieveAlerts (RetrieveAlertsRequest) returns (RetrieveAlertsResponse);

}

message CaptureAlertsRequest {
  string customercreditratingId = 1;
  string alertsId = 2;
  CaptureAlertsRequest captureAlertsRequest = 3;

}

message RetrieveAlertsRequest {
  string customercreditratingId = 1;
  string alertsId = 2;

}

