/*
  Customer Credit Rating

  This service domain maintains and administers the bank's credit assessment for customers based on consolidated internal data and optionally by referencing external credit agency reports

  The version of the OpenAPI document: 10.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package com.redhat.mercury.customercreditrating.v10.api.bqexternalreportingservice;

import "google/protobuf/empty.proto";
import public "v10/model/capture_external_reporting_request.proto";
import public "v10/model/capture_external_reporting_response.proto";
import public "v10/model/http_error.proto";
import public "v10/model/retrieve_external_reporting_response.proto";

service BQExternalReportingService {
  rpc CaptureExternalReporting (CaptureExternalReportingRequest) returns (CaptureExternalReportingResponse);

  rpc RetrieveExternalReporting (RetrieveExternalReportingRequest) returns (RetrieveExternalReportingResponse);

}

message CaptureExternalReportingRequest {
  string customercreditratingId = 1;
  string externalreportingId = 2;
  CaptureExternalReportingRequest captureExternalReportingRequest = 3;

}

message RetrieveExternalReportingRequest {
  string customercreditratingId = 1;
  string externalreportingId = 2;

}

