/*
  Customer Credit Rating

  This service domain maintains and administers the bank's credit assessment for customers based on consolidated internal data and optionally by referencing external credit agency reports

  The version of the OpenAPI document: 10.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package com.redhat.mercury.customercreditrating.v10.api.bqinternalreportingservice;

import "google/protobuf/empty.proto";
import public "v10/model/capture_internal_reporting_request.proto";
import public "v10/model/capture_internal_reporting_response.proto";
import public "v10/model/http_error.proto";
import public "v10/model/retrieve_internal_reporting_response.proto";

service BQInternalReportingService {
  rpc CaptureInternalReporting (CaptureInternalReportingRequest) returns (CaptureInternalReportingResponse);

  rpc RetrieveInternalReporting (RetrieveInternalReportingRequest) returns (RetrieveInternalReportingResponse);

}

message CaptureInternalReportingRequest {
  string customercreditratingId = 1;
  string internalreportingId = 2;
  CaptureInternalReportingRequest captureInternalReportingRequest = 3;

}

message RetrieveInternalReportingRequest {
  string customercreditratingId = 1;
  string internalreportingId = 2;

}

